added new route and my responses functionality
